@@ -26,9 +26,11 @@ enum BufferType {
 	BUFFER_UNSIGNED_CHAR,
 	BUFFER_UNSIGNED_SHORT,
 	BUFFER_UNSIGNED_INT,
+	BUFFER_UNSIGNED_LONG,
 	BUFFER_CHAR,
 	BUFFER_SHORT,
 	BUFFER_INT,
+	BUFFER_LONG,
 	BUFFER_FLOAT,
 	BUFFER_DOUBLE
 };
